@@ -302,6 +302,10 @@ Extension Modules
 Tests
 -----
 
+- Added guard_warnings_filter to test.test_support.  It returns a context
+  manager that protects the 'warnings' module's filter from being mutated
+  once the context has been exited.
+
 - Added some tests for modulefinder.
 
 - Converted test_imp to use unittest.
